<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:id="@+id/ly_top"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/bg_half_rounded"
        android:backgroundTint="@color/colorPrimary"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_drawer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/ic_short_text"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10d"
            android:text="@string/english_learning"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_28s" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/male_avatar"
            android:contentDescription="@string/imagepeople" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="@dimen/dimen_20d"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_22s" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTopLayout"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:elevation="6dp"
        android:padding="@dimen/standard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20d"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/pilih_level"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_22s"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_easy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_rounded"
            android:fontFamily="sans-serif-medium"
            android:text="@string/easy"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_18s"
            app:backgroundTint="@color/orange_light" />

        <Button
            android:id="@+id/btn_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_corner_radius"
            android:fontFamily="sans-serif-medium"
            android:text="@string/medium"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_18s"
            app:backgroundTint="@color/orange_light" />

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_corner_radius"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hard"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_18s"
            app:backgroundTint="@color/orange_light" />

    </LinearLayout>

    <!--    </androidx.cardview.widget.CardView>-->

    <LinearLayout
        android:id="@+id/ll_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            android:id="@+id/progressbar"
            layout="@layout/progress_bar" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_3"
        android:elevation="0dp"
        android:backgroundTint="@color/light_gray"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20d"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen_20d"
        android:layout_marginBottom="@dimen/dimen_20d"
        android:background="@drawable/btn_rounded"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:visibility="gone"
        app:backgroundTint="@color/colorAccent" />

</RelativeLayout>