<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/english_learning"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_32s" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/dimen_20d"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="62dp"
        android:clipToPadding="false"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/standard">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_32s" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/til_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard"
                android:hint="@string/password"
                app:boxStrokeColor="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard"
                android:gravity="center"
                android:text="@string/username_password_wrong"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/dimen_14s"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_auth"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_rounded"
                app:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_5d"
                android:layout_marginBottom="@dimen/dimen_5d"
                android:text="OR" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_auth"
                android:layout_marginTop="@dimen/dimen_5d"
                android:background="@drawable/btn_rounded"
                app:backgroundTint="@color/orange"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include
            android:id="@+id/progressbar"
            layout="@layout/progress_bar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom"
        android:backgroundTint="@color/colorPrimary" />

</RelativeLayout>