<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.speechrecognition.SpeechRecognitionActivity">

    <LinearLayout
        android:id="@+id/ly_app_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/dimen_10d"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_arrow_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10d"
            android:text="@string/english_learning"
            android:textSize="@dimen/dimen_28s"
            android:textColor="@color/white"
            android:fontFamily="cursive"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_speech"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dimen_20d"
        android:layout_below="@id/ly_app_bar"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_speech"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10d"
            android:layout_toStartOf="@+id/ib_refresh"
            android:text="@string/loading"
            android:textSize="@dimen/dimen_22s"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/ib_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_refresh"
            android:backgroundTint="@color/pink"/>

        <TextView
            android:id="@+id/tv_speech_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10d"
            android:layout_marginStart="@dimen/dimen_10d"
            android:layout_below="@id/tv_speech"
            android:text="@string/dot"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/green"/>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/tv_speech_result"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />-->

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyleHorizontal"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/textView"-->
<!--            android:layout_marginTop="@dimen/dimen_20d"/>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_speech_result">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/CircularDeterminateProgressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="60" />
        <TextView
            android:id="@+id/text_view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            android:text="@string/_0"
            tools:text="60%" />

<!--        <Button-->
<!--            android:id="@+id/button_decr"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="- 10%"-->
<!--            app:layout_constraintStart_toStartOf="@+id/progress_bar"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />-->
<!--        <Button-->
<!--            android:id="@+id/button_incr"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="+ 10%"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/progress_bar"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_mic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#F9F8FA"
        android:src="@drawable/microphone"/>


</RelativeLayout>